# todo-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXTENSIONS.md  README.md  TUI_DEVELOPMENT_PLAN.md  install-linux.sh  install-macos.sh  install-windows.bat  install.sh  todo-cli_1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue.md
migrations/: init.sql
src/: cli.rs  config.rs  db.rs  main.rs  notify.rs  project.rs  sound.rs  task.rs
src/platform/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
src/tui/: app.rs  calendar.rs  events.rs  mod.rs  ui.rs
systemd/: todo-reminder.service  todo-reminder.timer
tests/: cli.rs
