[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
rusqlite = { version = "0.31" }
notify-rust = "4"
ratatui = "0.27"
crossterm = "0.27"
fuzzy-matcher = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
